--- a/notebooks_glmsingle/view_searchlight.ipynb
+++ b/notebooks_glmsingle/view_searchlight.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41d00b08",
    "metadata": {},
    "outputs": [
@@ -76,66 +76,66 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.021806 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.025764 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.021534 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.025383 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.021532 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.023162 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.004111 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.002478 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.00431 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.002666 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.00114 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.001058 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001077 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001038 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_lhand_cortex.dscalar.nii was 0.025311 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_rhand_cortex.dscalar.nii was 0.027485 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_rhand_cortex.dscalar.nii was 0.027227 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_bi_cortex.dscalar.nii was 0.025843 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_rhand_cortex.dscalar.nii was 0.025899 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_lhand_cortex.dscalar.nii was 0.025612 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_bi_cortex.dscalar.nii was 0.025552 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_rhand_cortex.dscalar.nii was 0.026393 seconds.\n",
-      "\n",
-      "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_lhand_cortex.dscalar.nii was 0.02529 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glmsingle_mvpa_lhand_cortex.dscalar.nii was 0.028296 seconds.\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 30\u001b[39m\n\u001b[32m     27\u001b[39m     paths.append(os.path.abspath(os.path.join(baseDir, \u001b[33m'\u001b[39m\u001b[33msearchlight\u001b[39m\u001b[33m'\u001b[39m, \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mglm\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mglm\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m_cortex.dscalar.nii\u001b[39m\u001b[33m'\u001b[39m)))\n\u001b[32m     29\u001b[39m \u001b[38;5;66;03m# Run wb_view:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m30\u001b[39m \u001b[43msubprocess\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mwb_view\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43mpaths\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/subprocess.py:550\u001b[39m, in \u001b[36mrun\u001b[39m\u001b[34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[39m\n\u001b[32m    548\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m Popen(*popenargs, **kwargs) \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[32m    549\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m550\u001b[39m         stdout, stderr = \u001b[43mprocess\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    551\u001b[39m     \u001b[38;5;28;01mexcept\u001b[39;00m TimeoutExpired \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[32m    552\u001b[39m         process.kill()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/subprocess.py:1201\u001b[39m, in \u001b[36mPopen.communicate\u001b[39m\u001b[34m(self, input, timeout)\u001b[39m\n\u001b[32m   1199\u001b[39m         stderr = \u001b[38;5;28mself\u001b[39m.stderr.read()\n\u001b[32m   1200\u001b[39m         \u001b[38;5;28mself\u001b[39m.stderr.close()\n\u001b[32m-> \u001b[39m\u001b[32m1201\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1202\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m   1203\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/subprocess.py:1264\u001b[39m, in \u001b[36mPopen.wait\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m   1262\u001b[39m     endtime = _time() + timeout\n\u001b[32m   1263\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1264\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_wait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1265\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[32m   1266\u001b[39m     \u001b[38;5;66;03m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[32m   1267\u001b[39m     \u001b[38;5;66;03m# The first keyboard interrupt waits briefly for the child to\u001b[39;00m\n\u001b[32m   1268\u001b[39m     \u001b[38;5;66;03m# exit under the common assumption that it also received the ^C\u001b[39;00m\n\u001b[32m   1269\u001b[39m     \u001b[38;5;66;03m# generated SIGINT and will exit rapidly.\u001b[39;00m\n\u001b[32m   1270\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/subprocess.py:2053\u001b[39m, in \u001b[36mPopen._wait\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m   2051\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.returncode \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   2052\u001b[39m     \u001b[38;5;28;01mbreak\u001b[39;00m  \u001b[38;5;66;03m# Another thread waited.\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m2053\u001b[39m (pid, sts) = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_try_wait\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m   2054\u001b[39m \u001b[38;5;66;03m# Check the pid and loop as waitpid has been known to\u001b[39;00m\n\u001b[32m   2055\u001b[39m \u001b[38;5;66;03m# return 0 even without WNOHANG in odd situations.\u001b[39;00m\n\u001b[32m   2056\u001b[39m \u001b[38;5;66;03m# http://bugs.python.org/issue14396.\u001b[39;00m\n\u001b[32m   2057\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m pid == \u001b[38;5;28mself\u001b[39m.pid:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/subprocess.py:2011\u001b[39m, in \u001b[36mPopen._try_wait\u001b[39m\u001b[34m(self, wait_flags)\u001b[39m\n\u001b[32m   2009\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"All callers to this function MUST hold self._waitpid_lock.\"\"\"\u001b[39;00m\n\u001b[32m   2010\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2011\u001b[39m     (pid, sts) = os.waitpid(\u001b[38;5;28mself\u001b[39m.pid, wait_flags)\n\u001b[32m   2012\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mChildProcessError\u001b[39;00m:\n\u001b[32m   2013\u001b[39m     \u001b[38;5;66;03m# This happens if SIGCLD is set to be ignored or waiting\u001b[39;00m\n\u001b[32m   2014\u001b[39m     \u001b[38;5;66;03m# for child processes has otherwise been disabled for our\u001b[39;00m\n\u001b[32m   2015\u001b[39m     \u001b[38;5;66;03m# process.  This child is dead, we can't get the status.\u001b[39;00m\n\u001b[32m   2016\u001b[39m     pid = \u001b[38;5;28mself\u001b[39m.pid\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
-    "glm = 1\n",
+    "glm = 'single'\n",
     "import subprocess\n",
     "surfPy_dir = '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh'\n",
     "\n",
-    "names = ['lhand', 'rhand', 'bi', 'mvpa_rhand', 'mvpa_lhand', 'mvpa_bi', 'marginal_rhand', 'marginal_lhand']\n",
+    "names = ['mvpa_rhand', 'mvpa_lhand']\n",
     "hem = ['L', 'R']\n",
     "\n",
     "# add paths:\n",
     "paths = []\n",
     "# add surface files:\n",
-    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.Lm.flat.surf.gii')))\n",
-    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_R', f'fs_LR.32k.R.flat.surf.gii')))\n",
+    "# paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.Lm.flat.surf.gii')))\n",
+    "# paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_R', f'fs_LR.32k.R.flat.surf.gii')))\n",
+    "paths.append('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.L.inflated.surf.gii')\n",
+    "paths.append('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.R.inflated.surf.gii')\n",
     "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.LR.sulc.dscalar.nii')))\n",
     "\n",
     "paths.append(os.path.abspath('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii'))\n",
@@ -422,14 +422,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "glm = 1\n",
+    "glm = 'single'\n",
     "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
     "searchlight_names = ['mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
+    "searchlight_names = ['mvpa_lhand', 'mvpa_rhand']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
@@ -503,7 +504,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_16867/4057791086.py:49: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_13860/2749085733.py:45: RuntimeWarning: Mean of empty slice\n",
+      "  mean_data = np.nanmean(combined_data, axis=0, keepdims=True)\n",
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/numpy/lib/_nanfunctions_impl.py:2019: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_13860/2749085733.py:49: RuntimeWarning: divide by zero encountered in divide\n",
       "  tstats = mean_data / (std_data / np.sqrt(DoF+1))\n"
      ]
     },
@@ -514,26 +519,14 @@
       "Concatenating 12 subjects...\n",
       "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
       "Combined scalar axis size: 12\n",
-      "Final data shape: (12, 64984)\n",
-      "Concatenating 12 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 12\n",
-      "Final data shape: (12, 64984)\n",
-      "Concatenating 12 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 12\n",
-      "Final data shape: (12, 64984)\n",
-      "Concatenating 12 subjects...\n",
-      "Data shapes: [(1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984), (1, 64984)]\n",
-      "Combined scalar axis size: 12\n",
       "Final data shape: (12, 64984)\n"
      ]
     }
    ],
    "source": [
-    "glm = 1\n",
+    "glm = 'single'\n",
     "participants = [101,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
+    "searchlight_names = ['mvpa_lhand', 'mvpa_rhand']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
