--- a/notebooks_mri/timeseries.ipynb
+++ b/notebooks_mri/timeseries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "roi_names = ['...._L', '..S1_L', '..M1_L', '.PMd_L', '.PMv_L', '.SMA_L', '..V1_L', 'SPLa_L', 'SPLp_L', \n",
     "             '...._R', '..S1_R', '..M1_R', '.PMd_R', '.PMv_R', '.SMA_R', '..V1_R', 'SPLa_R', 'SPLp_R'] # 18 values\n",
-    "glm = 'single'\n",
+    "glm = 1\n",
     "pre = 8\n",
     "post = 21\n",
     "participants = [101,102,103,104,106,107,108]\n",
@@ -112,11 +112,11 @@
     "        y_hat = timeseries_sn[rows]['y_hat'].values.flatten()\n",
     "        \n",
     "        t = np.arange(0, numTR, 1)\n",
-    "        ons = reginfo[reginfo.run==run]['ons'].values.flatten() - numTR * (run - 1)\n",
+    "        # ons = reginfo[reginfo.run==run]['ons'].values.flatten() - numTR * (run - 1)\n",
     "        \n",
     "        fig, ax = plt.subplots(1, 1, figsize=(20, 4))\n",
-    "        ax.vlines(ons, ymin=min(y_adj), ymax=max(y_adj), colors='b', lw=0.5, alpha=0.5, linestyles='--')\n",
-    "        plt.plot(t, y_hat, color='r', lw=1.5)\n",
+    "        # ax.vlines(ons, ymin=min(y_adj), ymax=max(y_adj), colors='b', lw=0.5, alpha=0.5, linestyles='--')\n",
+    "        # plt.plot(t, y_hat, color='r', lw=1.5)\n",
     "        plt.plot(t, y_adj, color='k', lw=1)\n",
     "        plt.xlabel('time (s)')\n",
     "        plt.ylabel('y adj')\n",
@@ -133,45 +133,45 @@
     "    TIME LOCKING AND AVERAGING THE TIME SERIES \n",
     "    ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||\n",
     "    '''\n",
-    "    # load the events:\n",
-    "    reginfo = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', f'reginfo.tsv'))\n",
-    "    timeseries_sn = timeseries[timeseries.sn==sn].reset_index(drop=True)\n",
-    "    pinfo = pd.read_table(os.path.join(baseDir, 'participants.tsv'))\n",
-    "    numTR = int(pinfo[pinfo['sn']==sn]['numTR'].values[0])\n",
-    "    runs = pinfo[pinfo['sn']==sn]['glm_runs'].values[0]\n",
-    "    runs = [int(run) for run in runs.split('.')]\n",
-    "    ons = reginfo['ons'].values.flatten()\n",
-    "    cond_names = reginfo['name'].values.flatten()\n",
+    "#     # load the events:\n",
+    "#     reginfo = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', f'reginfo.tsv'))\n",
+    "#     timeseries_sn = timeseries[timeseries.sn==sn].reset_index(drop=True)\n",
+    "#     pinfo = pd.read_table(os.path.join(baseDir, 'participants.tsv'))\n",
+    "#     numTR = int(pinfo[pinfo['sn']==sn]['numTR'].values[0])\n",
+    "#     runs = pinfo[pinfo['sn']==sn]['glm_runs'].values[0]\n",
+    "#     runs = [int(run) for run in runs.split('.')]\n",
+    "#     ons = reginfo['ons'].values.flatten()\n",
+    "#     cond_names = reginfo['name'].values.flatten()\n",
     "    \n",
-    "    for r in range(len(roi_names)): # loop over regions\n",
-    "        y_adj = timeseries_sn[timeseries_sn.region==roi_names[r]]['y_adj'].values.flatten()\n",
-    "        y_hat = timeseries_sn[timeseries_sn.region==roi_names[r]]['y_hat'].values.flatten()\n",
+    "#     for r in range(len(roi_names)): # loop over regions\n",
+    "#         y_adj = timeseries_sn[timeseries_sn.region==roi_names[r]]['y_adj'].values.flatten()\n",
+    "#         y_hat = timeseries_sn[timeseries_sn.region==roi_names[r]]['y_hat'].values.flatten()\n",
     "\n",
-    "        y_adj_cut = extract_snippets(y_adj, pre, post, ons)\n",
-    "        y_hat_cut = extract_snippets(y_hat, pre, post, ons)\n",
+    "#         y_adj_cut = extract_snippets(y_adj, pre, post, ons)\n",
+    "#         y_hat_cut = extract_snippets(y_hat, pre, post, ons)\n",
     "\n",
-    "        tmp = pd.DataFrame()\n",
-    "        tmp['sn'] = [sn]*len(ons)\n",
-    "        tmp['region'] = [roi_names[r].lstrip('.')]*len(ons)\n",
-    "        tmp['run'] = reginfo['run'].values.flatten()\n",
-    "        tmp['cond_name'] = reginfo['name'].values.flatten()\n",
-    "        tmp['Uni_or_Bi'] = [int('bi' in name) for name in reginfo['name'].values.flatten()]\n",
-    "        tmp['hand'] = [0 if 'lhand' in name else 1 if 'rhand' in name else 2 for name in reginfo['name'].values.flatten()]\n",
-    "        tmp['angle_left'] = [int(name.split(':')[1]) if 'lhand' in name else int(name.split(':')[1].split('_')[0]) if 'bi' in name else -1 for name in reginfo['name'].values.flatten()]\n",
-    "        tmp['angle_right'] = [int(name.split(':')[1]) if 'rhand' in name else int(name.split(':')[1].split('_')[1]) if 'bi' in name else -1 for name in reginfo['name'].values.flatten()]\n",
-    "        tmp['ons'] = reginfo['ons'].values.flatten()\n",
-    "        tmp['ons_diff'] = np.insert(np.diff(ons), 0, -1)\n",
+    "#         tmp = pd.DataFrame()\n",
+    "#         tmp['sn'] = [sn]*len(ons)\n",
+    "#         tmp['region'] = [roi_names[r].lstrip('.')]*len(ons)\n",
+    "#         tmp['run'] = reginfo['run'].values.flatten()\n",
+    "#         tmp['cond_name'] = reginfo['name'].values.flatten()\n",
+    "#         tmp['Uni_or_Bi'] = [int('bi' in name) for name in reginfo['name'].values.flatten()]\n",
+    "#         tmp['hand'] = [0 if 'lhand' in name else 1 if 'rhand' in name else 2 for name in reginfo['name'].values.flatten()]\n",
+    "#         tmp['angle_left'] = [int(name.split(':')[1]) if 'lhand' in name else int(name.split(':')[1].split('_')[0]) if 'bi' in name else -1 for name in reginfo['name'].values.flatten()]\n",
+    "#         tmp['angle_right'] = [int(name.split(':')[1]) if 'rhand' in name else int(name.split(':')[1].split('_')[1]) if 'bi' in name else -1 for name in reginfo['name'].values.flatten()]\n",
+    "#         tmp['ons'] = reginfo['ons'].values.flatten()\n",
+    "#         tmp['ons_diff'] = np.insert(np.diff(ons), 0, -1)\n",
     "        \n",
-    "        col_names = [f\"y_adj{i-pre}\" for i in range(y_adj_cut.shape[1])]\n",
-    "        df_y_adj = pd.DataFrame(y_adj_cut, columns=col_names)\n",
-    "        col_names = [f\"y_hat{i-pre}\" for i in range(y_hat_cut.shape[1])]\n",
-    "        df_y_hat = pd.DataFrame(y_hat_cut, columns=col_names)\n",
-    "        tmp = pd.concat([tmp, df_y_hat], axis=1).reset_index(drop=True)\n",
-    "        tmp = pd.concat([tmp, df_y_adj], axis=1).reset_index(drop=True)\n",
+    "#         col_names = [f\"y_adj{i-pre}\" for i in range(y_adj_cut.shape[1])]\n",
+    "#         df_y_adj = pd.DataFrame(y_adj_cut, columns=col_names)\n",
+    "#         col_names = [f\"y_hat{i-pre}\" for i in range(y_hat_cut.shape[1])]\n",
+    "#         df_y_hat = pd.DataFrame(y_hat_cut, columns=col_names)\n",
+    "#         tmp = pd.concat([tmp, df_y_hat], axis=1).reset_index(drop=True)\n",
+    "#         tmp = pd.concat([tmp, df_y_adj], axis=1).reset_index(drop=True)\n",
     "\n",
-    "        T = pd.concat([T, tmp], axis=0).reset_index(drop=True)\n",
+    "#         T = pd.concat([T, tmp], axis=0).reset_index(drop=True)\n",
     "\n",
-    "T.to_csv(os.path.join(analysisDir, f'timeseries_cut_uwo.csv'), index=False)\n",
+    "# T.to_csv(os.path.join(analysisDir, f'timeseries_cut_uwo.csv'), index=False)\n",
     "\n"
    ]
   },
