--- a/notebooks_mri/view_searchlight.ipynb
+++ b/notebooks_mri/view_searchlight.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "41d00b08",
    "metadata": {},
    "outputs": [
@@ -76,69 +76,138 @@
       "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.033027 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.L.inflated.surf.gii was 0.039839 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.023217 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.R.inflated.surf.gii was 0.045697 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.02964 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.021294 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.005484 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.006577 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.0062 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.00599 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.003124 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.002792 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001935 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border was 0.001523 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.R.label.gii was 0.006396 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.R.label.gii was 0.007976 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.L.label.gii was 0.004862 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.L.label.gii was 0.006565 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.R.func.gii was 0.007679 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.R.func.gii was 0.012563 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.L.func.gii was 0.010177 seconds.\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.L.func.gii was 0.012471 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_lhand_cortex.dscalar.nii was 0.030345 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_lhand_cortex.dscalar.nii was 0.028555 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_rhand_cortex.dscalar.nii was 0.029143 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_rhand_cortex.dscalar.nii was 0.028893 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_bi_cortex.dscalar.nii was 0.029991 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_bi_cortex.dscalar.nii was 0.026989 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_rhand_cortex.dscalar.nii was 0.028789 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_rhand_cortex.dscalar.nii was 0.026988 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_lhand_cortex.dscalar.nii was 0.028455 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_lhand_cortex.dscalar.nii was 0.027816 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_bi_cortex.dscalar.nii was 0.02774 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_bi_cortex.dscalar.nii was 0.026859 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_rhand_cortex.dscalar.nii was 0.026507 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_rhand_cortex.dscalar.nii was 0.029963 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_lhand_cortex.dscalar.nii was 0.028761 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_lhand_cortex.dscalar.nii was 0.026758 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_intrinsic_cortex.dscalar.nii was 0.027703 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_intrinsic_cortex.dscalar.nii was 0.026955 seconds.\n",
       "\n",
       "\n",
-      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_extrinsic_cortex.dscalar.nii was 0.028369 seconds.\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_extrinsic_cortex.dscalar.nii was 0.02581 seconds.\n",
+      "\n",
+      "\n",
+      "WARNING: Window position QRect(-4,545 1040x653) outside any known screen, using primary screen\n",
+      "   Context Info File () Function () Line (0) Version (2) Category (qt.qpa.window)\n",
+      "0   wb_view                             0x0000000103941a50 _ZN5caret15SystemUtilities12getBackTraceERNSt3__16vectorINS_7AStringENS1_9allocatorIS3_EEEE + 176\n",
+      "1   wb_view                             0x0000000103942f18 _ZN5caret15SystemUtilities12getBackTraceEv + 52\n",
+      "2   wb_view                             0x0000000103962134 _ZN5caret25WorkbenchQtMessageHandler20messageHandlerForQt5E9QtMsgTypeRK18QMessageLogContextRK7QString + 56\n",
+      "3   QtCore                              0x0000000107fd23e0 _Z17qt_message_output9QtMsgTypeRK18QMessageLogContextRK7QString + 332\n",
+      "4   QtCore                              0x0000000107fd22a8 _Z17qt_message_output9QtMsgTypeRK18QMessageLogContextRK7QString + 20\n",
+      "5   QtCore                              0x0000000107fd89b8 _ZN6QDebugD2Ev + 128\n",
+      "6   libqcocoa.dylib                     0x0000000106c80e0c _ZN20QCocoaSystemTrayIcon17statusItemClickedEv + 59224\n",
+      "7   libqcocoa.dylib                     0x0000000106c7a0f0 _ZN20QCocoaSystemTrayIcon17statusItemClickedEv + 31292\n",
+      "8   libqcocoa.dylib                     0x0000000106c79bd4 _ZN20QCocoaSystemTrayIcon17statusItemClickedEv + 29984\n",
+      "9   QtGui                               0x00000001064ada08 _ZN14QWindowPrivate6createEby + 216\n",
+      "10  QtWidgets                           0x0000000106fda558 _ZN14QWidgetPrivate6createEv + 984\n",
+      "11  QtWidgets                           0x0000000106fd9318 _ZN7QWidget6createEybb + 312\n",
+      "12  QtWidgets                           0x0000000106feaa98 _ZN14QWidgetPrivate10setVisibleEb + 408\n",
+      "13  QtWidgets                           0x00000001071ae908 _ZN7QDialog10setVisibleEb + 288\n",
+      "14  wb_view                             0x0000000102c33314 _ZN5caret10GuiManager12receiveEventEPNS_5EventE + 2828\n",
+      "15  wb_view                             0x00000001038de2fc _ZN5caret12EventManager9sendEventEPNS_5EventE + 1568\n",
+      "16  wb_view                             0x0000000102cad234 _ZN5caret21OverlayViewController23settingsActionTriggeredEv + 108\n",
+      "17  QtCore                              0x0000000108099b4c _ZN11QMetaObject8activateEP7QObjectPKS_iPPv + 3676\n",
+      "18  QtGui                               0x000000010674195c _ZN7QAction8activateENS_11ActionEventE + 368\n",
+      "19  QtWidgets                           0x000000010709b5c4 _ZNK15QAbstractButton11isCheckableEv + 344\n",
+      "20  QtWidgets                           0x000000010709c50c _ZN15QAbstractButton17mouseReleaseEventEP11QMouseEvent + 172\n",
+      "21  QtWidgets                           0x0000000107192f90 _ZN11QToolButton17mouseReleaseEventEP11QMouseEvent + 20\n",
+      "22  QtWidgets                           0x0000000106feae40 _ZN7QWidget5eventEP6QEvent + 132\n",
+      "23  QtWidgets                           0x00000001071936c4 _ZN11QToolButton5eventEP6QEvent + 204\n",
+      "24  QtWidgets                           0x0000000106fa08d0 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent + 272\n",
+      "25  QtWidgets                           0x0000000106fa2db0 _ZN12QApplication6notifyEP7QObjectP6QEvent + 5312\n",
+      "26  QtCore                              0x00000001080517ac _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent + 208\n",
+      "27  QtWidgets                           0x0000000106fa109c _ZN19QApplicationPrivate14sendMouseEventEP7QWidgetP11QMouseEventS1_S1_PS1_R8QPointerIS0_Ebb + 908\n",
+      "28  QtWidgets                           0x0000000106ffeb9c _ZN14QWidgetPrivate35invalidateBackingStore_resizeHelperERK6QPointRK5QSize + 12012\n",
+      "29  QtWidgets                           0x0000000106ffdd6c _ZN14QWidgetPrivate35invalidateBackingStore_resizeHelperERK6QPointRK5QSize + 8380\n",
+      "30  QtWidgets                           0x0000000106fa08d0 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent + 272\n",
+      "31  QtWidgets                           0x0000000106fa1b04 _ZN12QApplication6notifyEP7QObjectP6QEvent + 532\n",
+      "32  QtCore                              0x00000001080517ac _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent + 208\n",
+      "33  QtGui                               0x0000000106470700 _ZN22QGuiApplicationPrivate17processMouseEventEPN29QWindowSystemInterfacePrivate10MouseEventE + 1808\n",
+      "34  QtGui                               0x00000001064b9324 _ZN22QWindowSystemInterface22sendWindowSystemEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE + 444\n",
+      "35  libqcocoa.dylib                     0x0000000106c52078 qt_plugin_instance + 52524\n",
+      "36  CoreFoundation                      0x000000018e4d7ad8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28\n",
+      "37  CoreFoundation                      0x000000018e4d7a6c __CFRunLoopDoSource0 + 172\n",
+      "38  CoreFoundation                      0x000000018e4d77d8 __CFRunLoopDoSources0 + 232\n",
+      "39  CoreFoundation                      0x000000018e4d6468 __CFRunLoopRun + 820\n",
+      "40  CoreFoundation                      0x000000018e594898 _CFRunLoopRunSpecificWithOptions + 532\n",
+      "41  HIToolbox                           0x000000019aed3730 RunCurrentEventLoopInMode + 316\n",
+      "42  HIToolbox                           0x000000019aed68f8 ReceiveNextEventCommon + 272\n",
+      "43  HIToolbox                           0x000000019b0601f4 _BlockUntilNextEventMatchingListInMode + 48\n",
+      "44  AppKit                              0x0000000192dae308 _DPSBlockUntilNextEventMatchingListInMode + 236\n",
+      "45  AppKit                              0x00000001928c4edc _DPSNextEvent + 588\n",
+      "46  AppKit                              0x0000000193317a04 -[NSApplication(NSEventRouting) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 688\n",
+      "47  AppKit                              0x0000000193317710 -[NSApplication(NSEventRouting) nextEventMatchingMask:untilDate:inMode:dequeue:] + 72\n",
+      "48  AppKit                              0x00000001928bd720 -[NSApplication run] + 368\n",
+      "49  libqcocoa.dylib                     0x0000000106c50f58 qt_plugin_instance + 48140\n",
+      "50  QtCore                              0x000000010805ab3c _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE + 500\n",
+      "51  QtCore                              0x0000000108051e88 _ZN16QCoreApplication4execEv + 128\n",
+      "52  wb_view                             0x0000000102aafac8 main + 9108\n",
+      "53  dyld                                0x000000018e079d54 start + 7184\n",
+      "\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args=['wb_view', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.L.inflated.surf.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.R.inflated.surf.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border', '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.R.label.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BA_handArea.32k.L.label.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.R.func.gii', '/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/BAprobatlas.32k.L.func.gii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_bi_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_mvpa_bi_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_rhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_marginal_lhand_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_intrinsic_cortex.dscalar.nii', '/Users/aghavamp/Desktop/Projects/bimanual_wrist/data/fMRI/searchlight/glm1_corr_extrinsic_cortex.dscalar.nii'], returncode=0)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -152,8 +221,10 @@
     "# add paths:\n",
     "paths = []\n",
     "# add surface files:\n",
-    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.Lm.flat.surf.gii')))\n",
-    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_R', f'fs_LR.32k.R.flat.surf.gii')))\n",
+    "# paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.Lm.flat.surf.gii')))\n",
+    "# paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_R', f'fs_LR.32k.R.flat.surf.gii')))\n",
+    "paths.append('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.L.inflated.surf.gii')\n",
+    "paths.append('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/fs_LR.32k.R.inflated.surf.gii')\n",
     "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.LR.sulc.dscalar.nii')))\n",
     "\n",
     "paths.append(os.path.abspath('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii'))\n",
@@ -173,7 +244,7 @@
     "# add searchlight results:\n",
     "for name in names:\n",
     "    paths.append(os.path.abspath(os.path.join(baseDir, 'searchlight', f'glm{glm}_{name}_cortex.dscalar.nii')))\n",
-    "\n",
+    "    \n",
     "# Run wb_view:\n",
     "subprocess.run(['wb_view', *paths])\n",
     "\n",
@@ -420,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
@@ -483,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "ca66579b",
    "metadata": {},
    "outputs": [
@@ -501,9 +572,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_2738/157289505.py:49: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_67962/157289505.py:49: RuntimeWarning: divide by zero encountered in divide\n",
       "  tstats = mean_data / (std_data / np.sqrt(DoF+1))\n",
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_2738/157289505.py:60: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_67962/157289505.py:60: RuntimeWarning: divide by zero encountered in divide\n",
       "  tstats = mean_data / (std_data / np.sqrt(DoF+1))\n"
      ]
     },
